[package]
name = "dst-init-macros"
version = "0.2.0"
edition = "2021"
description = "Dependency of crate dst-init."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true

[dependencies]
syn ={version = "1.*",features=["full","extra-traits","derive"]}
proc-macro2 = "1.0"
convert_case = "0.6.0"
quote = "1.*"